--- a/src/components/styles/Lamp.module.css
+++ b/src/components/styles/Lamp.module.css
@@ -1,6 +1,6 @@
 .lampWrapper {
   display: flex;
-  margin-top: -12px;
+  padding-bottom: calc(var(--space-2xl) * (11.5 / 37.05));
 }
 
 .lamp {
